# llvm-assignment

./: .gitignore  CMakeLists.txt  README.md  commands.txt
inputs/: iv-test.ll  iv-test.opt.ll  licm-test.ll  licm-test.opt.ll  matmul-canonical.ll  ptr-test.ll  ptr-test.opt.ll
outputs/: iv-test-out.ll  licm-test-out.opt.ll  matmul-licm.ll
src/: AffineRecurrence.cpp  CMakeLists.txt  DerivedInductionVar.cpp  SimpleLICM.cpp
tests/: iv-test.c  licm-test.c  ptr-test.c
